--- a/index.html
+++ b/index.html
@@ -119,10 +119,8 @@
                   </div>
                </div>
                <div class="col-lg-4 col-md-6">
-                  <!-- Single Service -->
                   <div class="single-service">
-                     <!--  <i class="fa fa-mobile"></i> -->
-                     <h2>CRM</h2>
+                      <h2>Custom Management</h2>
                      <p>Manage customer profiles along with their account balances.</p>
                   </div>
                </div>
