--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <div class="header-area navbar" id="header" >
          <div class="container-fluid">
-            <div class="col-lg-3 col-md-4 align-self-center">
+            <div class="col-lg-2 col-md-4 align-self-center">
                <div class="logo">
                   <a href="index.html" class="latterColor">
                      <!-- <img src="assets/img/Icon.png" alt=""> -->
@@ -52,7 +52,7 @@
                   </a>
                </div>
             </div>
-            <div class="col-lg-5  col-md-4  d-none d-lg-block">
+            <div class="col-lg-6  col-md-4  d-none d-lg-block">
                <div class="menu-wep">
                   <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
                   <a href="contact.html" class="headA">Become a partner</a>
@@ -142,7 +142,7 @@
                </div>
                <div class="col-lg-4 col-md-6" id="gapping">
                   <div class="single-service">
-                     <h2>Extension</h2>
+                     <h2>Extensions</h2>
                      <p>Explore the extensions that empower your business.</p>
                   </div>
                </div>
@@ -565,7 +565,39 @@
    </div>
 </div>
 
+   <div class="community-sec">
+   <div class="container">
+      <div id="what-we-do">
+         <div class="container">
+           <div class="row mt-5">
+               <div class="col-lg-6 col-md-6">
+                  <!-- Single Service -->
+                  <div class="single-service">
+                    <a class="btn" href="https://marketplace.minical.io/" target="_blank"><i class="fa fa-desktop"></i></a> 
+                     <h2>Marketplace</h2>
+                     <p>Explore the extensions of miniCal on <a href="https://marketplace.minical.io/" target="_blank">Marketplace</a>
+                        </p>
+                  </div>
+               </div>
+               <div class="col-lg-6 col-md-6" href="">
+                  <!-- Single Service -->
+                  <div class="single-service">
+                     <a class="btn" href="https://discord.gg/a7B7RXZ3w5">
+                        <i class="fab fa-discord"></i>
+                     </a>
+                     <h2>Join The Community</h2>
+                     <p>Get support. exchange ideas with our growing dev community.<br>
+                         Join us on  <a href="https://discord.gg/a7B7RXZ3w5">
+                           Discord.
+                        </a></p>
+                  </div>
+               </div>
+            </div>            
+         </div>
+      </div>
+   </div>
 
+   </div>
       
       <div class="web">
          <div class="container">
@@ -612,7 +644,7 @@
                            <li>  <a  class="btn" href="https://github.com/minical/minical">
                               <i class="fab fa-github center" style="font-size:30px"></i></a>
                            </li>
-                           <li>  <a  class="btn" href="https://github.com/minical/minical">
+                           <li>  <a  class="btn" href="https://discord.gg/a7B7RXZ3w5">
                               <i class="fab fa-discord center" style="font-size:30px"></i></a>
                            </li>
                         </ul>
