--- a/pricing.html
+++ b/pricing.html
@@ -32,14 +32,14 @@
       <!--:::::header area start:::::::-->
       <div class="header-area navbar" id="header">
          <div class="container-fluid">
-            <div class="col-lg-3 col-md-4  align-self-center">
+            <div class="col-lg-2 col-md-4  align-self-center">
                <div class="logo">
                   <a href="index.html" class="latterColor">
                   <!-- <img src="assets/img/Icon.png" alt=""> -->
                   miniCal</a>
                </div>
             </div>
-            <div class="col-lg-5 col-md-4  d-none d-lg-block">
+            <div class="col-lg-6 col-md-4  d-none d-lg-block">
                <div class="menu-wep">
                  <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
                   <a href="contact.html" class="headA">Become a partner</a>
@@ -122,7 +122,7 @@
                     <ul class="icons-css">
                      <li>  <a  class="btn" href="https://github.com/minical/minical">
                <i class="fab fa-github center" style="font-size:30px"></i></a></li>
-                     <li>  <a  class="btn" href="https://github.com/minical/minical">
+                     <li>  <a  class="btn" href="https://discord.gg/a7B7RXZ3w5">
                <i class="fab fa-discord center" style="font-size:30px"></i></a></li>
                     </ul> 
                   </div>
