--- a/pricing.html
+++ b/pricing.html
@@ -42,8 +42,9 @@
             <div class="col-lg-6 col-md-4  d-none d-lg-block">
                <div class="menu-wep">
                  <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
-                  <a href="contact.html" class="headA">Become a partner</a>
-                  <a href="pricing.html" class="headA">Pricing</a>
+                 <a href="contact.html" class="headA">Become a partner</a>
+                 <a href="pricing.html" class="headA">Pricing</a>
+                 <a href="https://marketplace.minical.io/" class="headA">Marketplace</a>
                </div>
             </div>
             <div class="col-lg-4  col-md-4  d-none d-lg-block text-right btn-2">
@@ -68,7 +69,7 @@
       </div>
       <div class="pricingg">
          <div class="plan">
-            <h2>SELF HOSTED</h2>
+            <h2>Hosted by you</h2>
             <div class="price">Free</div>
             <ul class="features">
                <!-- <li><i class="fas fa-check-circle"></i> Unlimited Websites</li>
@@ -77,32 +78,28 @@
                <li><i class="fas fa-check-circle"></i> Continuous deployment</li>
                <li><i class="fas fa-times-circle"></i> No priority support</li> -->
             </ul>
-            <a href="https://github.com/minical/minical"><button>Github</button></a>
+            <a href="https://github.com/minical/minical"><button>Source code available on Github</button></a>
          </div>
          <div class="plan popular">
-            <span>HOSTED</span>
-            <h2>HOSTED</h2>
+            <h2>Hosted by minical.io</h2>
             <div class="price">$20 / month</div>
             <ul class="features">
-               <!-- <li><i class="fas fa-check-circle"></i> Unlimited Websites</li>
-               <li><i class="fas fa-check-circle"></i> 5 Users</li>
-               <li><i class="fas fa-check-circle"></i> 512MB Space/website</li>
-               <li><i class="fas fa-check-circle"></i> Continuous deployment</li>
-               <li><i class="fas fa-check-circle"></i> Email Support</li> -->
+               <li><i class="fas fa-check-circle"></i> Includes 100 bookings creation. $0.20 per additional booking</li>
+               <li><i class="fas fa-check-circle"></i> Continuous updates</li>
+               <li><i class="fas fa-check-circle"></i> Email Support</li>
             </ul>
-            <a href="http://app.minical.io/auth/login" target="_blank"><button>Sign-in</button></a>
+            <a href="http://app.minical.io/auth/login" target="_blank"><button>Sign-up</button></a>
          </div>
          <div class="plan">
             <h2>ENTERPRISE</h2>
             <div class="price">Custom</div>
             <ul class="features">
-               <!-- <li><i class="fas fa-check-circle"></i> Unlimited Websites</li>
-               <li><i class="fas fa-check-circle"></i> Unlimited Users</li>
-               <li><i class="fas fa-check-circle"></i> Unlimited Space/website</li>
-               <li><i class="fas fa-check-circle"></i> Continuous deployment</li>
-               <li><i class="fas fa-check-circle"></i> 24/7 Email support</li> -->
+               <li><i class="fas fa-check-circle"></i> API Access</li>
+               <li><i class="fas fa-check-circle"></i> 99.99 SLA</li>
+               <li><i class="fas fa-check-circle"></i> Onboarding & Training</li>
+               <li><i class="fas fa-check-circle"></i> Direct support from core engineers</li>
             </ul>
-            <a href="mailto:support@minical.io"><button>Contact</button></a>
+            <a href="mailto:support@minical.io"><button>Contact us</button></a>
          </div>
       </div>
       <!--:::::footer area start:::::::-->
