--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
         margin-left: 17%;
         margin-right: 48%;
         margin-top: 6%;
-        width: 500px;
+        width: 800px;
         position: relative;
     }
     @media only screen and (min-width: 300px) and  (max-width: 425px){
@@ -122,8 +122,9 @@
             <div class="col-lg-6 col-md-4   d-none d-lg-block">
                <div class="menu-wep">
                  <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
-                  <a href="contact.html" class="headA">Become a partner</a>
-                  <a href="pricing.html"  class="headA">Pricing</a>
+                 <a href="contact.html" class="headA">Become a partner</a>
+                 <a href="pricing.html" class="headA">Pricing</a>
+                 <a href="https://marketplace.minical.io/" class="headA">Marketplace</a>
                </div>
             </div>
             <div class="col-lg-4  col-md-4  d-none d-lg-block text-right btn-2">
@@ -141,16 +142,14 @@
         
         <div class="card cardMM">
             <div style="padding: 10%;">
-                <h1 class="heading3">Let's Team Up</h1>
+                <h1 class="heading3">Are you a software vendor? Imagine spending 50% less money in maintaining your software</h1>
                 <br>
                  <p class="m_color">
-                    Do you find yourself developing the same features as your competitors?
-                    Imagine having the same level of technology running at your company at a fraction of the cost.
-                    miniCal is 100% open-source and there is no vendor lock-in's.
+                    miniCal supported by many software vendors just like you and it's 100% open-source, so there is no vendor lock-in.
                 </p>    
                 <hr>
                 <div style="text-align: center;">
-                    <p class="m_color">Contact us at <a href="mailto:support@minical.io" class="m_color">support@minical.io
+                    <p class="m_color">Let's team up. Message us at <a href="mailto:support@minical.io" class="m_color">support@minical.io
                     </a></p>
                 </div>
             </div>
