changed link to marketplace

--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
                  <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
                  <a href="contact.html" class="headA">Become a partner</a>
                  <a href="pricing.html" class="headA">Pricing</a>
-                 <a href="https://marketplace.minical.io/" class="headA">Marketplace</a>
+                 <a href="http://marketplace.minical.io/" class="headA">Marketplace</a>
                </div>
             </div>
             <div class="col-lg-4  col-md-4  d-none d-lg-block text-right btn-2">
