--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <link rel="stylesheet" href="assets/css/prism-line-numbers.css">
       <!--:::::jquery 3.2.1 js :::::::-->
       <script src="assets/js/jquery.3.3.1.min.js"></script>
-      <!-- Global site tag (gtag.js) - Google Analytics -->
+       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-5JMCT393M0"></script> 
    </head>
    <style>
@@ -61,10 +61,11 @@
                </div>
             </div>
             <div class="col-lg-4 col-md-4  d-none d-lg-block text-right btn-2 gapp">
-               <a  class="btn" style="color: #fff;" href="https://github.com/minical/minical">
-               <i class="fab fa-github center" style="font-size:35px"></i></a>
+               <a  class="btn" id="git-btn"> <iframe src="https://ghbtns.com/github-btn.html?user=minical&repo=minical&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe></a>
               <a href="http://app.minical.io/auth/register" target="_blank" class="btn-2"><span>Sign Up</span></a>
               <a href="http://app.minical.io/auth/login" target="_blank" class="btn-2"><span>Log In</span></a>
+              <!-- Place this tag where you want the button to render. -->
+              
             </div>
          </div>
       </div>
@@ -566,23 +567,6 @@
            $("#footer").load("footer.html"); 
          });
          </script> -->
-      <script>
-         $.ajax({
-             //chnage it when minical repo become public and the path will be /pankaj9296/minical/minical
-          url: ' https://api.github.com/repos/kamranahmedse/githunt',
-          data: {
-              format: 'json'
-          },
-          error: function() {
-              $('#info').html('<p>An error has occurred</p>');
-          },
-          dataType: 'jsonp',
-          success: function(data) {
-              var count = data.data.stargazers_count;
-              $("#star_rating").text(count);
-          },
-          type: 'GET'
-          });
-      </script>
+   
    </body>
 </html>
