--- a/pricing.html
+++ b/pricing.html
@@ -44,13 +44,12 @@
                  <!--  <a href="http://marketplace.minical.io/"  target="_blank" class="headA" >Marketplace</a>  -->
                  <a href="contact.html" class="headA">Become a partner</a>
                  <a href="pricing.html" class="headA">Pricing</a>
-                 <a href="http://marketplace.minical.io/" class="headA">Marketplace</a>
+                 <a href="http://marketplace.minical.io/" target="_blank" class="headA">Marketplace</a>
                </div>
             </div>
             <div class="col-lg-4  col-md-4  d-none d-lg-block text-right btn-2">
-               <a  class="btn" style="color: #fff;" href="https://github.com/minical/minical">
-               <i class="fab fa-github center" style="font-size:35px"></i></a>
-              <a href="http://app.minical.io/auth/register" target="_blank" class="btn-2"><span>Sign Up</span></a>
+               <a  class="btn" id="git-btn"> <iframe src="https://ghbtns.com/github-btn.html?user=minical&repo=minical&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe></a>
+               <a href="http://app.minical.io/auth/register" target="_blank" class="btn-2"><span>Sign Up</span></a>
               <a href="http://app.minical.io/auth/login" target="_blank" class="btn-2"><span>Log In</span></a>
 
             </div>
