--- a/index.html
+++ b/index.html
@@ -475,9 +475,9 @@
                <div class="col-lg-6 col-md-6">
                   <!-- Single Service -->
                   <div class="single-service">
-                    <a class="btn" href="https://marketplace.minical.io/" target="_blank"><i class="fa fa-desktop"></i></a> 
+                    <a class="btn" href="http://marketplace.minical.io/" target="_blank"><i class="fa fa-desktop"></i></a> 
                      <h2>Marketplace</h2>
-                     <p>Explore the extensions of miniCal on <a href="https://marketplace.minical.io/" target="_blank">Marketplace</a>
+                     <p>Explore the extensions of miniCal on <a href="http://marketplace.minical.io/" target="_blank">Marketplace</a>
                         </p>
                   </div>
                </div>
