--- a/index.html
+++ b/index.html
@@ -74,11 +74,9 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="banner-content">
-                     <h1>Open Source Booking Management Software</h1>
+                     <h1>Open Source CRM with Booking Calendar baked-in</h1>
                      <p>
-                        miniCal is an open-source booking management platform for <br>all businesses
-                        that requires booking/appointment scheduling. <!-- A user-friendly interface
-                           of miniCal has already helped many businesses such as Hotels -->
+                        miniCal helps SaaS startups build their MVP while saving months of work and tens of thousands of dollars
                      </p>
                      <div class="bottom-btn">
                         <div class="btn-2">
