--- a/contact.html
+++ b/contact.html
@@ -141,15 +141,12 @@
         
         <div class="card cardMM">
             <div style="padding: 10%;">
-                <h1 class="heading3">Are you a software vendor? Imagine spending 50% less money in maintaining your software</h1>
+                <h1 class="heading3">Are you tired of re-inventing the same wheel as your competitors?</h1>
                 <br>
                  <p class="m_color">
-                    miniCal supported by many software vendors just like you and it's 100% open-source, so there is no vendor lock-in.
-                </p>    
-                <hr>
-                <div style="text-align: center;">
-                    <p class="m_color">Let's team up. Message us at <a href="mailto:support@minical.io" class="m_color">support@minical.io
-                    </a></p>
+                    Businesses are saving tens of thousands of dollars by using miniCal instead of running a software team inhouse.<br/>
+                    Would you like to learn more? Message us at <a href="mailto:support@minical.io" class="m_color">support@minical.io
+                 </p>
                 </div>
             </div>
         </div>
