--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="banner-content">
-                     <h1>Open Source CRM with Booking Calendar baked-in</h1>
+                     <h1>Launch your B2B SaaS product in 1 day</h1>
                      <p>
-                        miniCal helps SaaS startups build their MVP while saving months of work and tens of thousands of dollars
+                        miniCal is an Open Source CRM with Booking Calendar baked-in. 
                      </p>
                      <div class="bottom-btn">
                         <div class="btn-2">
@@ -271,21 +271,20 @@
                            <center>
 <pre class="line-numbers">
 <code class="language-json">{
-   "name": "Hostel",
+   "name": "Yoga Studio",
    "version": "1.0.0",
    "dependencies": {
       "online_booking_engine" : "1.0.0",
-      "todays_panel" : "1.0.0",
-      "invoice_email" : "1.0.0"      
+      "todays_panel" : "1.0.0"    
    },
    "settings": {
       "unit_name":{ 
-         "singular": "bed", 
-         "plural" : "beds" 
+         "singular": "studio", 
+         "plural" : "studios" 
          },
       "unit_type_name" : {
-         "singular":"room type",
-         "plural": "room types"
+         "singular":"studio type",
+         "plural": "studio types"
          },
       "display_tooltip" : true,
       "hourly_booking_enabled" : true,
