--- a/contact.html
+++ b/contact.html
@@ -141,11 +141,13 @@
         
         <div class="card cardMM">
             <div style="padding: 10%;">
-                <h1 class="heading3">Are you tired of re-inventing the same wheel as your competitors?</h1>
+                <h1 class="heading3">miniCal is open source :)</h1>
                 <br>
                  <p class="m_color">
-                    Businesses are saving tens of thousands of dollars by using miniCal instead of running a software team inhouse.<br/>
-                    Would you like to learn more? Message us at <a href="mailto:support@minical.io" class="m_color">support@minical.io
+                    and it has already been stress-tested and powering hundreds of businesses around the world.<br/>
+                    We can help you customize your own miniCal solution, and provide robust product to your clients.<br/>
+                    We are a startup too, so talk to us and let's create something amazing together.<br/>
+                    You can reach us at <a href="mailto:support@minical.io" class="m_color">support@minical.io
                  </p>
                 </div>
             </div>
