--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
     <div class="welcome-area v1">
         
         <div class="card cardMM">
-            <div style="padding: 10%;">
+            <div>
                 <h1 class="heading3">miniCal is open source :)</h1>
                 <br>
                  <p class="m_color">
