--- a/pricing.html
+++ b/pricing.html
@@ -83,7 +83,7 @@
             <h2>Hosted by minical.io</h2>
             <div class="price">$20 / month</div>
             <ul class="features">
-               <li><i class="fas fa-check-circle"></i> Includes 100 bookings creation. $0.20 per additional booking</li>
+               <li><i class="fas fa-check-circle"></i> Includes 100 bookings creation. $0.20 per additional booking (enough for a 15 room property) </li>
                <li><i class="fas fa-check-circle"></i> Continuous updates</li>
                <li><i class="fas fa-check-circle"></i> Email Support</li>
             </ul>
