--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="banner-content">
-                     <h1>Launch your B2B SaaS product in 1 day</h1>
+                     <h1>Launch your property management software business without a CTO</h1>
                      <p>
-                        miniCal is an Open Source CRM with Booking Calendar baked-in. 
+                        miniCal is an open-Source PMS that'll stop you from developing endless features & integrations.
                      </p>
                      <div class="bottom-btn">
                         <div class="btn-2">
