--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <div class="banner-content">
                      <h1>Launch your property management software business without a CTO</h1>
                      <p>
-                        miniCal is an open-Source PMS that'll stop you from developing endless features & integrations.
+                        miniCal is an open-Source PMS that'll prevent you from wasting time and money in developing endless features & integrations.
                      </p>
                      <div class="bottom-btn">
                         <div class="btn-2">
