--- a/pricing.html
+++ b/pricing.html
@@ -80,23 +80,24 @@
             <a href="https://github.com/minical/minical"><button>Source code available on Github</button></a>
          </div>
          <div class="plan popular">
-            <h2>Hosted by minical.io</h2>
-            <div class="price">$20 / month</div>
+            <h2>Hosted</h2>
+            <div class="price">$0.20 USD per booking creation</div>
             <ul class="features">
-               <li><i class="fas fa-check-circle"></i> Includes 100 bookings creation. $0.20 per additional booking (enough for a 15 room property) </li>
+               <li><i class="fas fa-check-circle"></i> API Access</li>
                <li><i class="fas fa-check-circle"></i> Continuous updates</li>
                <li><i class="fas fa-check-circle"></i> Email Support</li>
+               <li><i class="fas fa-check-circle"></i> Resellers & whitelabel partners welcome </li>               
+               <li><i class="fas fa-check-circle"></i> Can support around 5 vacation rental properties at $20/mo cost </li>               
             </ul>
             <a href="http://app.minical.io/auth/login" target="_blank"><button>Sign-up</button></a>
          </div>
          <div class="plan">
-            <h2>ENTERPRISE</h2>
-            <div class="price">Custom</div>
+            <h2>Support plan (Hosted addon)</h2>
+            <div class="price">$1500 USD per month. Billed annually </div>
             <ul class="features">
-               <li><i class="fas fa-check-circle"></i> API Access</li>
                <li><i class="fas fa-check-circle"></i> 99.99 SLA</li>
                <li><i class="fas fa-check-circle"></i> Onboarding & Training</li>
-               <li><i class="fas fa-check-circle"></i> Direct support from core engineers</li>
+               <li><i class="fas fa-check-circle"></i> Direct support from core engineers (5 hours/month)</li>
             </ul>
             <a href="mailto:support@minical.io"><button>Contact us</button></a>
          </div>
