--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="banner-content">
-                     <h1>Launch your property management software business without a CTO</h1>
+                     <h1>Open-source Property Management System (PMS)</h1>
                      <p>
-                        miniCal is an open-Source PMS that'll prevent you from wasting time and money in developing endless features & integrations.
+                        We help PMS SaaS companies, so they don't need to spend time & money developing the same features as everyone else.
                      </p>
                      <div class="bottom-btn">
                         <div class="btn-2">
