--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                <div class="col-lg-4 col-md-6" id="gapping">
                   <div class="single-service">
                      <h2>Extensions</h2>
-                     <p>Explore the extensions that empower your business.</p>
+                     <p>There are currently  33 extensions and counting! Popular extensions such as payment gateway & channel manager integrations are already available.</p>
                   </div>
                </div>
                <div class="col-lg-4 col-md-6" id="gapping">
@@ -158,13 +158,13 @@
                   <div class="single-service">
                      <!-- <i class="fa fa-calendar"></i> -->
                      <h2>Reports and Analytics</h2>
-                     <p>Get all kinds of reports which you can also export. </p>
+                     <p>Explore dozens of built-in reports. Providing insights about the properties.</p>
                   </div>
                </div>
                <div class="col-lg-4 col-md-6" id="gapping">
                   <div class="single-service">
                      <h2>User Management</h2>
-                     <p>Manage multiple user's roles and roles privilege.</p>
+                     <p>Users can be assigned into different roles that have different permissions.</p>
                   </div>
                </div>
                <!-- <div class="col-lg-4 col-md-6" id="gapping">
