--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="banner-content">
-                     <h1>Open-source Property Management System (PMS)</h1>
+                     <h1>Open-source Property Management System</h1>
                      <p>
-                        We help PMS SaaS companies, so they don't need to spend time & money developing the same features as everyone else.
+                        miniCal is an open-source project contributed by various PMS vendors to collectively improve and maintain one PMS platform.
+                        Everyone is welcome to resell, or make a business out of this project.
                      </p>
                      <div class="bottom-btn">
                         <div class="btn-2">
